css file updated

--- a/style.css
+++ b/style.css
@@ -54,3 +54,19 @@
 #introText {
     margin: 20px 0px;
 }
+
+@media only screen and (max-width: 734px) {
+    .container { 
+        display: flex;
+        flex-direction: column;
+    }
+
+    .quiz {
+        margin: 120px 0px;
+        padding: 0px 40px;
+        flex: 0 0 50%;
+        justify-content: center;
+        text-align: center;
+    }
+
+}
